--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
     <h1>About Me</h1>
     <div class="about">
         <ul>
-        <li>Iam Boga Dheeraj born and brought up  from Kothagudam Pursuing B.Tech at Malla Reddy Engineering College and Management Science 
-        in CSE(AIML)<br></li>
-        <li> skills : C programming ,Java programming, Web development, Basic python. <br></li>
+        <li>Iam Boga Dheeraj Palhani born and brought up from Kothagudam Pursuing B.Tech at Malla Reddy Engineering College and Management Sciences 
+        in CSE(AI&ML)<br></li>
+        <li> skills : python, c++, dsa, java. <br></li>
         <li>Strengths: I am a quick learner and a hard worker<br></li>
         <li>Hobbies :Reading Book, Browsing net ,listen to music and sports<br></li>
         <li> Short-term goal: Improve my skills and knowledge and gain experience.<br></li>
